Get kubectl corresponding to the cluster version

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,9 @@ phases:
     commands:
       - curl -sS -o aws-iam-authenticator https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/aws-iam-authenticator
       #- curl -sS -o kubectl https://amazon-eks.s3-us-west-2.amazonaws.com/1.10.3/2018-07-26/bin/linux/amd64/kubectl
-      - curl -sSO https://storage.googleapis.com/kubernetes-release/release/v1.14.0/bin/linux/amd64/kubectl
-      - chmod +x ./kubectl ./aws-iam-authenticator
+      #- curl -sSO https://storage.googleapis.com/kubernetes-release/release/v1.14.0/bin/linux/amd64/kubectl
+      #- chmod +x ./kubectl ./aws-iam-authenticator
+      - chmod +x ./aws-iam-authenticator
       - export PATH=$PWD/:$PATH
       #- apt-get update && apt-get -y install jq python3-pip python3-dev && pip3 install --upgrade awscli
       - apt-get update && apt-get -y install jq python3-dev
@@ -32,6 +33,8 @@ phases:
       - export AWS_SESSION_TOKEN="$(echo ${CREDENTIALS} | jq -r '.Credentials.SessionToken')"
       - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
+      - curl -sSO https://storage.googleapis.com/kubernetes-release/release/v`aws eks describe-cluster --name $EKS_CLUSTER_NAME | jq -r '.cluster.version'`.0/bin/linux/amd64/
+      - chmod +x ./kubectl
       - kubectl apply -f hello-k8s.yml
       - printf '[{"name":"hello-k8s","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
